--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -5,3 +5,17 @@ main-titles dark-grey: #2C303F;
 paragraph grey: #5b5e6d;
 nav grey: #5b5e6d;
 */
+
+.nav-bar{
+    width: 50vw;
+    display: flex;
+    
+}
+
+.nav-bar ul{
+    list-style: none;
+}
+
+@media (width < 768px) {
+    
+}
